--- a/web/index.html
+++ b/web/index.html
@@ -14,5 +14,6 @@ and open the template in the editor.
         <h1>Calculator Lab</h1>
         <p><a href="lab1/form.jsp">Go to lab 1</a></p>
         <p><a href="lab2/form.jsp">Go to lab 2</a></p>
+        <p><a href="lab3/form.jsp">Go to lab 3</a></p>
     </body>
 </html>
